@@ -8,7 +8,7 @@ We offer one required and one optional Windows Installers for those who do not w
 <P>
 <B>Required:</B> Choose either the 32-bit or 64-bit GMT installer to install GMT version GMT_VERSION with
 all executables (including supplements and GDAL/OGR utilities), the netCDF, PCRE and GDAL DLL libraries, the gawk utility, the complete
-GSHHS version GSHHS_VERSION coastlines, rivers, and borders, all HTML documentation, and the example batch scripts with test data [62 Mb].<P>
+GSHHS version GSHHS_VERSION coastlines, rivers, and borders, all HTML documentation, and the example batch scripts with test data [73 Mb].<P>
 <B>Optional:</B> The PDF installer will install the complete documentation in PDF format [19 Mb].
 <P>
 Should you have additional needs for source code or tutorial data sets, etc., you
